fix for post date not showing
Fixed a css issue where the post date would not show if a post had no tags.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -555,6 +555,7 @@ hr {
 }
 
 .post-footer {
+    min-height: 22px;
     position: relative;
 }
 
